# myob_interview

./: CONTRIBUTING.md  Cargo.toml  DEPLOYING.md  README.md  REPORT.md  coverage.sh  health.txt  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
pett_server/: Cargo.toml  build.rs  pett_server.service
pett_server/src/: application.rs  health.rs  health_checker.rs  main.rs  metadata.rs
scripts/: publish_prepare_app.ps1  publish_prepare_app.sh
