[package]
name = "pett_server"
version = "0.1.2"
description = "Web application with hello world, health, and metadata endpoints"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
warp = "0.3.6"

[dev-dependencies]
bytes = "1.5.0"
serde_json = "1.0.114"
tempfile = "3.10.1"

[build-dependencies]
git2 = "0.18.2"
